--- a/modules/experiences/client/views/view-experience.client.view.html
+++ b/modules/experiences/client/views/view-experience.client.view.html
@@ -11,6 +11,6 @@
     </a>
   </div>
   <div>
-    Medium: <span class="lead" ng-bind="experience.medium"></span>
+    Medium: <span class="lead" ng-bind="experience.medium.name"></span>
   </div>
 </section>
