--- a/modules/experiences/client/views/create-experience.client.view.html
+++ b/modules/experiences/client/views/create-experience.client.view.html
@@ -1,4 +1,4 @@
-<section ng-controller="ExperiencesController">
+<section ng-controller="ExperienceCreateController">
   <div class="page-header">
     <h1>New Experience</h1>
   </div>
@@ -7,9 +7,8 @@
       <fieldset>
         <div class="form-group" show-errors>
           <label for="medium">Medium</label>
-          <select name="medium" id="medium" ng-model="newExperience.medium" required>
-            <option ng-repeat="option in media" value="{{option._id}}">{{option.name}}</option>
-          </select>
+          <select name="medium" id="medium" ng-model="newExperience.medium" required
+                  ng-options="medium as medium.name for medium in media"/>
           <div ng-messages="experienceForm.medium.$error" role="alert">
             <p class="help-block error-text" ng-message="required">Experience medium is required.</p>
           </div>
