--- a/modules/experiences/client/views/create-experience.client.view.html
+++ b/modules/experiences/client/views/create-experience.client.view.html
@@ -4,29 +4,70 @@
   </div>
   <div class="col-md-12">
     <form name="experienceForm" class="form-horizontal" ng-submit="create(experienceForm.$valid)" novalidate>
-      <fieldset>
-        <div class="form-group" show-errors>
+        <fieldset class="form-group" show-errors>
           <label for="medium">Medium</label>
-          <select name="medium" id="medium" ng-model="newExperience.medium" required
-                  ng-options="medium as medium.name for medium in media"/>
+          <select id="medium" name="medium" class="form-control"
+                  ng-model="newExperience.medium" required
+                  ng-options="medium as medium.name for medium in media"></select>
           <div ng-messages="experienceForm.medium.$error" role="alert">
             <p class="help-block error-text" ng-message="required">Experience medium is required.</p>
           </div>
-        </div>
-        <div class="form-group" show-errors>
+        </fieldset>
+
+        <fieldset class="form-group" show-errors>
           <label for="title">Title</label>
-          <input name="title" type="text" ng-model="newExperience.title" id="title" class="form-control" placeholder="Title" required>
+          <input type="text" id="title" name="title" class="form-control"
+                 ng-model="newExperience.title" required>
           <div ng-messages="experienceForm.title.$error" role="alert">
             <p class="help-block error-text" ng-message="required">Experience title is required.</p>
           </div>
-        </div>
+        </fieldset>
+
+        <fieldset class="form-group">
+          <label for="date">Date</label>
+          <!-- TODO : width of the datepicker-->
+          <p class="input-group">
+            <input type="date" id="date" name="date" class="form-control"
+                   uib-datepicker-popup="{{format}}"
+                   ng-model="newExperience.date" is-open="status.opened"
+                  datepicker-options="dateOptions" date-disabled="disabled(date, mode)" close-text="Close" />
+          <span class="input-group-btn">
+            <button type="button" class="btn btn-default" ng-click="open($event)"><i class="glyphicon glyphicon-calendar"></i></button>
+          </span>
+          </p>
+        </fieldset>
+
         <div class="form-group">
+          <label>Author(s)</label>
+          <editable-string-array id="author" name="author"
+               ng-model="newExperience.author"></editable-string-array>
+        </div>
+
+        <fieldset class="form-group">
+          <label for="description">Description</label>
+          <textarea id="description" name="description" class="form-control"
+                    ng-model="newExperience.description"></textarea>
+        </fieldset>
+
+        <fieldset class="form-group">
+          <label for="review">Review</label>
+          <textarea id="review" name="review" class="form-control"
+                      ng-model="newExperience.review"></textarea>
+        </fieldset>
+
+        <fieldset class="form-group">
+          <label for="rating">Rating</label>
+          <input type="number" id="rating" name="rating" class="form-control"
+                 min="0" max="10" step="1" placeholder="Rating of the experience"
+                 ng-model="newExperience.rating">
+        </fieldset>
+
+      <div class="form-group">
           <input type="submit" class="btn btn-default">
         </div>
         <div ng-show="error" class="text-danger">
           <strong ng-bind="error"></strong>
         </div>
-      </fieldset>
     </form>
   </div>
 </section>
