--- a/modules/experiences/client/views/create-experience.client.view.html
+++ b/modules/experiences/client/views/create-experience.client.view.html
@@ -55,14 +55,17 @@
                       ng-model="newExperience.review"></textarea>
         </fieldset>
 
-        <fieldset class="form-group">
+        <fieldset class="form-group" show-errors>
           <label for="rating">Rating</label>
           <input type="number" id="rating" name="rating" class="form-control"
-                 min="0" max="10" step="1" placeholder="Rating of the experience"
+                 min="0" max="10" placeholder="Rating of the experience"
                  ng-model="newExperience.rating">
+          <div ng-messages="experienceForm.rating.$valid" role="alert">
+            <p class="help-block error-text">Rating between 0 and 10</p>
+          </div>
         </fieldset>
 
-      <div class="form-group">
+        <div class="form-group">
           <input type="submit" class="btn btn-default">
         </div>
         <div ng-show="error" class="text-danger">
