--- a/modules/experiences/client/views/edit-experience.client.view.html
+++ b/modules/experiences/client/views/edit-experience.client.view.html
@@ -1,26 +1,71 @@
-<section ng-controller="ExperienceUpdateController" ng-init="findOne()">
+<section ng-controller="ExperienceEditController" ng-init="findOne()">
   <div class="page-header">
-    <h1>Edit Medium</h1>
+    <h1>Edit Experience</h1>
   </div>
   <div class="col-md-12">
     <form name="experienceForm" class="form-horizontal" ng-submit="update(experienceForm.$valid)" novalidate>
       <fieldset>
-        <div class="form-group" show-errors>
+        <fieldset class="form-group" show-errors>
           <label for="medium">Medium</label>
-          <!-- there could be problems with as and track by, see https://docs.angularjs.org/api/ng/directive/ngOptions-->
-          <select name="medium" id="medium" ng-model="experience.medium" required
-                  ng-options="medium as medium.name for medium in media"/>
+          <select id="medium" name="medium" class="form-control"
+                  ng-model="experience.medium" required
+                  ng-options="medium as medium.name for medium in media"></select>
           <div ng-messages="experienceForm.medium.$error" role="alert">
             <p class="help-block error-text" ng-message="required">Experience medium is required.</p>
           </div>
-        </div>
-        <div class="form-group" show-errors>
+        </fieldset>
+
+        <fieldset class="form-group" show-errors>
           <label for="title">Title</label>
-          <input name="title" type="text" ng-model="experience.title" id="title" class="form-control" placeholder="Title" required>
+          <input type="text" id="title" name="title" class="form-control"
+                 ng-model="experience.title" required>
           <div ng-messages="experienceForm.title.$error" role="alert">
             <p class="help-block error-text" ng-message="required">Experience title is required.</p>
           </div>
+        </fieldset>
+
+        <fieldset class="form-group">
+          <label for="date">Date</label>
+          <!-- TODO : width of the datepicker-->
+          <p class="input-group">
+            <input type="date" id="date" name="date" class="form-control"
+                   uib-datepicker-popup="{{format}}"
+                   ng-model="experience.date" is-open="status.opened"
+                   datepicker-options="dateOptions" date-disabled="disabled(date, mode)" close-text="Close" />
+          <span class="input-group-btn">
+            <button type="button" class="btn btn-default" ng-click="open($event)"><i class="glyphicon glyphicon-calendar"></i></button>
+          </span>
+          </p>
+        </fieldset>
+
+        <div class="form-group">
+          <label>Author(s)</label>
+          <editable-string-array id="author" name="author"
+                                 ng-model="experience.author"></editable-string-array>
         </div>
+
+        <fieldset class="form-group">
+          <label for="description">Description</label>
+          <textarea id="description" name="description" class="form-control"
+                    ng-model="experience.description"></textarea>
+        </fieldset>
+
+        <fieldset class="form-group">
+          <label for="review">Review</label>
+          <textarea id="review" name="review" class="form-control"
+                    ng-model="experience.review"></textarea>
+        </fieldset>
+
+        <fieldset class="form-group" show-errors>
+          <label for="rating">Rating</label>
+          <input type="number" id="rating" name="rating" class="form-control"
+                 min="0" max="10" placeholder="Rating of the experience"
+                 ng-model="experience.rating">
+          <div ng-messages="experienceForm.rating.$valid" role="alert">
+            <p class="help-block error-text">Rating between 0 and 10</p>
+          </div>
+        </fieldset>
+
         <div class="form-group">
           <input type="submit" class="btn btn-default">
         </div>
