Client side: update Medium Create and Edit page

--- a/modules/experiences/client/views/create-experience.client.view.html
+++ b/modules/experiences/client/views/create-experience.client.view.html
@@ -3,7 +3,7 @@
     <h1>New Experience</h1>
   </div>
   <div class="col-md-12">
-    <form name="experienceForm" class="form-horizontal" ng-submit="create(experienceForm.$valid)" novalidate>
+    <form name="experienceForm" ng-submit="create(experienceForm.$valid)" novalidate>
         <fieldset class="form-group" show-errors>
           <label for="medium">Medium</label>
           <select id="medium" name="medium" class="form-control"
