--- a/modules/experiences/client/views/edit-experience.client.view.html
+++ b/modules/experiences/client/views/edit-experience.client.view.html
@@ -3,7 +3,7 @@
     <h1>Edit Experience</h1>
   </div>
   <div class="col-md-12">
-    <form name="experienceForm" class="form-horizontal" ng-submit="update(experienceForm.$valid)" novalidate>
+    <form name="experienceForm" ng-submit="update(experienceForm.$valid)" novalidate>
       <fieldset>
         <fieldset class="form-group" show-errors>
           <label for="medium">Medium</label>
