--- a/modules/media/client/views/edit-medium.client.view.html
+++ b/modules/media/client/views/edit-medium.client.view.html
@@ -3,40 +3,28 @@
     <h1>Edit Medium</h1>
   </div>
   <div class="col-md-12">
-    <form name="mediumForm" class="form-horizontal" ng-submit="update(mediumForm.$valid)" novalidate>
-      <fieldset>
-        <div class="form-group" show-errors>
+    <form name="mediumForm" ng-submit="update(mediumForm.$valid)" novalidate>
+        <fieldset class="form-group" show-errors>
           <label for="name">Name</label>
-          <input name="name" type="text" ng-model="medium.name" id="name" class="form-control" placeholder="Name" required>
+          <input type="text" id="name" name="name" class="form-control"
+                 ng-model="medium.name" required>
           <div ng-messages="mediumForm.name.$error" role="alert">
             <p class="help-block error-text" ng-message="required">Medium name is required.</p>
           </div>
-        </div>
-        <div class="form-group">
-          <label>Specifications</label>
-          <div ng-repeat="spec in medium.specifications">
-            <div class="pull-right">
-              <a class="btn btn-primary" ng-click="removeSpecEdit($index);">
-                <i class="glyphicon glyphicon-trash"></i>
-              </a>
-            </div>
-            <p class="lead" ng-bind="spec"></p>
-          </div>
-          <div>
-            <input name="newSpec" type="text" ng-model="newSpecTemp" id="newSpec" placeholder="Specification">
-            <a class="btn btn-primary" ng-click="addSpecEdit();">
-              <i class="glyphicon glyphicon-plus"></i>
-            </a>
-          </div>
+        </fieldset>
 
+        <div class="form-group">
+          <label>Specifications(s)</label>
+          <editable-string-array id="author" name="author"
+                                 ng-model="medium.specifications"></editable-string-array>
         </div>
+
         <div class="form-group">
           <input type="submit" value="Update" class="btn btn-default">
         </div>
         <div ng-show="error" class="text-danger">
           <strong ng-bind="error"></strong>
         </div>
-      </fieldset>
     </form>
   </div>
 </section>
