--- a/modules/media/client/views/create-medium.client.view.html
+++ b/modules/media/client/views/create-medium.client.view.html
@@ -14,7 +14,7 @@
         </fieldset>
 
         <div class="form-group">
-          <label>Specifications(s)</label>
+          <label>Specification(s)</label>
           <editable-string-array id="author" name="author"
                                  ng-model="specifications"></editable-string-array>
         </div>
