--- a/modules/experiences/client/views/edit-experience.client.view.html
+++ b/modules/experiences/client/views/edit-experience.client.view.html
@@ -66,6 +66,15 @@
           </div>
         </fieldset>
 
+        <fieldset class="form-group" ng-show="specificationsTemp.length > 0">
+          <label>Medium Specifications</label>
+          <div ng-repeat="specification in specificationsTemp"  >
+            <label for="mediumSpecification{{$index}}">{{specification.name}}</label>
+            <input type="text" id="mediumSpecification{{$index}}" name="mediumSpecification{{$index}}" class="form-control"
+              ng-model="specification.value">
+          </div>
+        </fieldset>
+
         <div class="form-group">
           <input type="submit" class="btn btn-default">
         </div>
