Get location via Google Api; save to database

--- a/modules/experiences/client/views/create-experience.client.view.html
+++ b/modules/experiences/client/views/create-experience.client.view.html
@@ -37,6 +37,20 @@
           </p>
         </fieldset>
 
+        <fieldset class="form-group">
+          <label for="locationDescription">Location</label>
+          <p class="input-group">
+            <input type="text" id="locationDescription" name="locationDescription" class="form-control"
+                   ng-model="location.description">
+          <span class="input-group-btn">
+            <button type="button" class="btn btn-default" ng-click="updateLocationInfo()" title="geocode"><i class="glyphicon glyphicon-globe"></i></button>
+          </span>
+          </p>
+          <div ng-show="hasLngLat()">
+            Location: longitude {{location.lng}}, latitude {{location.lat}}
+          </div>
+        </fieldset>
+
         <div class="form-group">
           <label>Author(s)</label>
           <editable-string-array id="author" name="author"
