--- a/modules/locations/client/views/create-location.client.view.html
+++ b/modules/locations/client/views/create-location.client.view.html
@@ -1,36 +1,37 @@
-<section ng-controller="LocationsController">
+<section ng-controller="LocationCreateEditController" ng-init="initCreate()">
   <div class="page-header">
     <h1>New Location</h1>
   </div>
   <div class="col-md-12">
-    <form name="locationForm" ng-submit="create(locationForm.$valid)" novalidate>
+    <form name="locationForm" novalidate>
       <fieldset class="form-group" show-errors>
       <label for="description">Description</label>
       <p class="input-group">
         <input type="text" id="description" name="description" class="form-control"
-               ng-model="newLocation.description" required>
-            <span class="input-group-btn">
-              <button type="button" class="btn btn-default" ng-click="updateLocationInfo(newLocation)" title="geocode the location description">
-                <i class="glyphicon glyphicon-globe"></i>
-              </button>
-            </span>
+               ng-model="location.description" required>
+        <span class="input-group-btn">
+          <button type="button" class="btn btn-default" ng-click="updateLocationInfo(location)" title="geocode the location description">
+            <i class="glyphicon glyphicon-globe"></i>
+          </button>
+        </span>
       </p>
       <div ng-messages="locationForm.description.$error" role="alert">
         <p class="help-block error-text" ng-message="required">Location description is required.</p>
       </div>
-      <div ng-show="hasLngLat(newLocation)">
-        Location: longitude {{newLocation.lng}}, latitude {{newLocation.lat}}
-      </div>
       </fieldset>
 
-      <!-- TODO: add a map with the position and allow to change the position-->
+      <div class = "form-group">
+        <div ng-show="hasLngLat(location)">
+          <leaflet lf-center="center" height="480px" markers="markers" defaults="defaults" event-broadcast="events"></leaflet>
+        </div>
+      </div>
 
-        <div class="form-group">
-          <input type="submit" class="btn btn-default">
-        </div>
-        <div ng-show="error" class="text-danger">
-          <strong ng-bind="error"></strong>
-        </div>
+      <div class="form-group">
+        <button type="button" class="btn btn-default" ng-click="create(locationForm.$valid)">Create locatiion</button>
+      </div>
+      <div ng-show="error" class="text-danger">
+        <strong ng-bind="error"></strong>
+      </div>
     </form>
   </div>
 </section>
