--- a/modules/locations/client/views/edit-location.client.view.html
+++ b/modules/locations/client/views/edit-location.client.view.html
@@ -1,36 +1,37 @@
-<section ng-controller="LocationsController" ng-init="findOne()">
+<section ng-controller="LocationCreateEditController" ng-init="findOne()">
   <div class="page-header">
     <h1>Edit Location</h1>
   </div>
   <div class="col-md-12">
-    <form name="locationForm" ng-submit="update(locationForm.$valid)" novalidate>
-        <fieldset class="form-group" show-errors>
-          <label for="description">Description</label>
-          <p class="input-group">
-            <input type="text" id="description" name="description" class="form-control"
-                   ng-model="location.description" required>
-            <span class="input-group-btn">
-              <button type="button" class="btn btn-default" ng-click="updateLocationInfo(location)" title="geocode the location description">
-                <i class="glyphicon glyphicon-globe"></i>
-              </button>
-            </span>
-          </p>
-          <div ng-messages="locationForm.description.$error" role="alert">
-            <p class="help-block error-text" ng-message="required">Location description is required.</p>
-          </div>
-          <div ng-show="hasLngLat(location)">
-            Location: longitude {{location.lng}}, latitude {{location.lat}}
-          </div>
-        </fieldset>
-
-        <!-- TODO: add a map with the position and allow to change the position-->
-
-        <div class="form-group">
-          <input type="submit" value="Update" class="btn btn-default">
+    <form name="locationForm" novalidate>
+      <fieldset class="form-group" show-errors>
+        <label for="description">Description</label>
+        <p class="input-group">
+          <input type="text" id="description" name="description" class="form-control"
+                 ng-model="location.description" required>
+          <span class="input-group-btn">
+            <button type="button" class="btn btn-default" ng-click="updateLocationInfo(location)" title="geocode the location description">
+              <i class="glyphicon glyphicon-globe"></i>
+            </button>
+          </span>
+        </p>
+        <div ng-messages="locationForm.description.$error" role="alert">
+          <p class="help-block error-text" ng-message="required">Location description is required.</p>
         </div>
-        <div ng-show="error" class="text-danger">
-          <strong ng-bind="error"></strong>
+      </fieldset>
+
+      <div class = "form-group">
+        <div ng-show="hasLngLat(location)">
+          <leaflet lf-center="center" height="480px" markers="markers" defaults="defaults" event-broadcast="events"></leaflet>
         </div>
+      </div>
+
+      <div class="form-group">
+        <button type="button" class="btn btn-default" ng-click="update(locationForm.$valid)">Update locatiion</button>
+      </div>
+      <div ng-show="error" class="text-danger">
+        <strong ng-bind="error"></strong>
+      </div>
     </form>
   </div>
 </section>
