--- a/modules/experiences/client/views/list-experiences.client.view.html
+++ b/modules/experiences/client/views/list-experiences.client.view.html
@@ -4,7 +4,7 @@
   </div>
   <div class="list-group">
     <a ng-repeat="experience in experiences" ui-sref="experiences.view({experienceId: experience._id})" class="list-group-item">
-      <h4 class="list-group-item-heading" ng-bind="experience.title"></h4>
+      <h4 class="list-group-item-heading">{{experience.date | date : 'dd/MM/yyyy'}} | {{experience.medium.name}} | {{experience.title}}</h4>
     </a>
   </div>
   <div class="alert alert-warning text-center" ng-if="experiences.$resolved && !experiences.length">
