--- a/modules/media/client/views/view-medium.client.view.html
+++ b/modules/media/client/views/view-medium.client.view.html
@@ -1,17 +1,27 @@
 <section ng-controller="MediaController" ng-init="findOne()">
   <div class="page-header">
-    <h1 ng-bind="media.name"></h1>
+    <h1 ng-bind="medium.name"></h1>
   </div>
-  <div class="pull-right">
-    <a class="btn btn-primary" ui-sref="media.edit({mediumId: medium._id})">
-      <i class="glyphicon glyphicon-edit"></i>
-    </a>
-    <a class="btn btn-primary" ng-click="remove();">
-      <i class="glyphicon glyphicon-trash"></i>
-    </a>
+  <div  ng-show="medium.user">
+    <div class="pull-right">
+      <a class="btn btn-primary" ui-sref="media.edit({mediumId: medium._id})">
+        <i class="glyphicon glyphicon-edit"></i>
+      </a>
+      <a class="btn btn-primary" ng-click="remove();">
+        <i class="glyphicon glyphicon-trash"></i>
+      </a>
+    </div>
+    <p class="lead"></p>
+    <p>Personal medium</p>
   </div>
-  <p class="lead" ng-bind="medium.name"></p>
-  <ul ng-repeat="specification in medium.specifications">
-    <li>{{specification}}</li>
-  </ul>
+  <div  ng-show="!medium.user">
+    <p>General medium</p>
+  </div>
+  <div ng-show="medium.specifications && medium.specifications.length > 0">
+    <p>Specification keys:</p>
+    <ul ng-repeat="specification in medium.specifications">
+      <li>{{specification}}</li>
+    </ul>
+  </div>
+
 </section>
