--- a/modules/media/client/views/create-medium.client.view.html
+++ b/modules/media/client/views/create-medium.client.view.html
@@ -1,6 +1,7 @@
 <section ng-controller="MediaController">
   <div class="page-header">
-    <h1>New Medium</h1>
+    <h1 ng-show="onlyGeneral">New General Medium</h1>
+    <h1 ng-show="!onlyGeneral">New Personal Medium</h1>
   </div>
   <div class="col-md-12">
     <form name="mediumForm" ng-submit="create(mediumForm.$valid)" novalidate>
@@ -14,13 +15,13 @@
         </fieldset>
 
         <div class="form-group">
-          <label>Specification(s)</label>
+          <label>Specification key(s)</label>
           <editable-string-array id="author" name="author"
                                  ng-model="specifications"></editable-string-array>
         </div>
 
         <div class="form-group">
-          <input type="submit" class="btn btn-default">
+          <input type="submit" class="btn btn-default" value="Create Medium">
         </div>
         <div ng-show="error" class="text-danger">
           <strong ng-bind="error"></strong>
