--- a/modules/locations/client/views/create-location.client.view.html
+++ b/modules/locations/client/views/create-location.client.view.html
@@ -1,23 +1,30 @@
 <section ng-controller="LocationCreateEditController" ng-init="initCreate()">
   <div class="page-header">
-    <h1>New Location</h1>
+    <h1 ng-show="onlyGeneral">New General Location</h1>
+    <h1 ng-show="!onlyGeneral">New Personal Location</h1>
   </div>
   <div class="col-md-12">
     <form name="locationForm" novalidate>
       <fieldset class="form-group" show-errors>
       <label for="description">Description</label>
-      <p class="input-group">
-        <input type="text" id="description" name="description" class="form-control"
-               ng-model="location.description" required>
+      <input type="text" id="description" name="description" class="form-control"
+             ng-model="location.description" required>
+      <div ng-messages="locationForm.description.$error" role="alert">
+        <p class="help-block error-text" ng-message="required">Location description is required.</p>
+      </div>
+      </fieldset>
+
+      <fieldset class="form-group" show-errors>
+        <label for="address">Address</label>
+        <p class="input-group">
+          <input type="text" id="address" name="address" class="form-control"
+                 ng-model="location.address">
         <span class="input-group-btn">
           <button type="button" class="btn btn-default" ng-click="updateLocationInfo(location)" title="geocode the location description">
             <i class="glyphicon glyphicon-globe"></i>
           </button>
         </span>
-      </p>
-      <div ng-messages="locationForm.description.$error" role="alert">
-        <p class="help-block error-text" ng-message="required">Location description is required.</p>
-      </div>
+        </p>
       </fieldset>
 
       <div class = "form-group">
@@ -27,7 +34,7 @@
       </div>
 
       <div class="form-group">
-        <button type="button" class="btn btn-default" ng-click="create(locationForm.$valid)">Create locatiion</button>
+        <button type="button" class="btn btn-default" ng-click="create(locationForm.$valid)">Create Location</button>
       </div>
       <div ng-show="error" class="text-danger">
         <strong ng-bind="error"></strong>
