--- a/modules/media/client/views/list-media.client.view.html
+++ b/modules/media/client/views/list-media.client.view.html
@@ -1,7 +1,7 @@
 <section ng-controller="MediaController" ng-init="find()">
   <div class="page-header">
-    <h1 ng-show="onlyShowGeneral">General Media</h1>
-    <h1 ng-show="!onlyShowGeneral">Media</h1>
+    <h1 ng-show="onlyGeneral">General Media</h1>
+    <h1 ng-show="!onlyGeneral">Media</h1>
   </div>
   <div class="list-group">
     <a ng-repeat="medium in media" ui-sref="media.view({mediumId: medium._id})" class="list-group-item">
