--- a/modules/experiences/client/views/list-experiences.client.view.html
+++ b/modules/experiences/client/views/list-experiences.client.view.html
@@ -3,11 +3,67 @@
     <h1>Experiences</h1>
   </div>
   <div>
-    <!-- table with sorting and pagination code from:
-    * http://stackoverflow.com/questions/19409492/how-to-achieve-pagination-table-layout-with-angular-js
-    * http://code.ciphertrick.com/2015/06/01/search-sort-and-pagination-ngrepeat-angularjs/-->
-    <table class="table table-striped table-condensed table-hover">
-      <thead>
+    <h3>Filters</h3>
+    <div class="row">
+      <div class="col-md-4">
+        <label class="control-label">Period</label>
+        <div class="input-group form-group">
+          <input type="text" id="fromDate" name="fromDate" class="form-control"
+                 datepicker-popup="{{format}}"
+                 ng-model="filter.startDate" is-open="status.openedStart"
+                 datepicker-options="datePickerOptions" close-text="Close" disabled
+                 placeholder="Start Date"/>
+          <span class="input-group-btn">
+            <button type="button" class="btn btn-default" ng-click="openStart($event)" title="Choose start date">
+              <i class="glyphicon glyphicon-calendar"></i>
+            </button>
+          </span>
+        </div>
+        <div class="input-group form-group">
+          <input type="text" id="endDate" name="endDate" class="form-control"
+                 datepicker-popup="{{format}}"
+                 ng-model="filter.endDate" is-open="status.openedEnd"
+                 datepicker-options="datePickerOptions" close-text="Close" disabled
+                 placeholder="End Date"/>
+              <span class="input-group-btn">
+                <button type="button" class="btn btn-default" ng-click="openEnd($event)" title="Choose end date">
+                  <i class="glyphicon glyphicon-calendar"></i>
+                </button>
+              </span>
+        </div>
+      </div>
+      <div class="col-md-4">
+        <label for="mediaFilter" class="control-label">Media</label>
+        <select name="multipleSelect" id="mediaFilter" ng-model="filter.media" multiple class="form-control input-group">
+          <option ng-repeat="medium in media" value="{{medium._id}}">{{medium.name}}</option>
+        </select>
+      </div>
+      <div class="col-md-4">
+        <label for="search" class="control-label">Search</label>
+        <input type="text" id="search" name="search" class="form-control"
+               ng-model="filter.search" placeholder="Search in all text fields"/>
+      </div>
+    </div>
+    <div class="row" ng-show="experiences && experiences.length > 0">
+      Found {{experiences.length}} experiences.
+    </div>
+    <div class="row" ng-show="!experiences || experiences.length === 0">
+      No experiences from search result.
+    </div>
+  </div>
+  <div>
+    <ul class="nav nav-tabs">
+      <li class="active"><a href="#">Table</a></li>
+      <li><a href="#">Map</a></li>
+    </ul>
+  </div>
+
+    <div>
+      <!-- table with sorting and pagination code from:
+   * http://stackoverflow.com/questions/19409492/how-to-achieve-pagination-table-layout-with-angular-js
+   * http://code.ciphertrick.com/2015/06/01/search-sort-and-pagination-ngrepeat-angularjs/-->
+      <table class="table table-striped table-condensed table-hover">
+        <thead>
         <tr>
           <th ng-click="sortBy('date')">Date
             <span class="glyphicon sort-icon" ng-show="sort.sortingKey=='date'"
@@ -22,38 +78,17 @@
                   ng-class="{'glyphicon-chevron-up':sort.reverse,'glyphicon-chevron-down':!sort.reverse}"></span>
           </th>
         </tr>
-      </thead>
-      <!--<tfoot>
-      <td colspan="6">
-        <div class="pagination pull-right">
-          <ul>
-            <li ng-class="{disabled: currentPage == 0}">
-              <a href ng-click="prevPage()">« Prev</a>
-            </li>
-
-            <li ng-repeat="n in range(pagedItems.length, currentPage, currentPage + gap) "
-                ng-class="{active: n == currentPage}"
-                ng-click="setPage()">
-              <a href ng-bind="n + 1">1</a>
-            </li>
-
-            <li ng-class="{disabled: (currentPage) == pagedItems.length - 1}">
-              <a href ng-click="nextPage()">Next »</a>
-            </li>
-          </ul>
-        </div>
-      </td>
-      </tfoot>-->
-      <tbody>
+        </thead>
+        <tbody>
         <tr ng-repeat="experience in experiences | orderBy:sort.sortingKey:sort.reverse"
             ui-sref="experiences.view({experienceId: experience._id})">
           <td>{{experience.date | date : 'dd/MM/yyyy'}}</td>
           <td>{{experience.medium.name}}</td>
           <td>{{experience.title}}</td>
         </tr>
-      </tbody>
-    </table>
-  </div>
+        </tbody>
+      </table>
+    </div>
   <div class="alert alert-warning text-center" ng-if="experiences.$resolved && !experiences.length">
     No experiences yet, why don't you <a ui-sref="experiences.create">create one</a>?
   </div>
