--- a/modules/experiences/client/views/edit-experience.client.view.html
+++ b/modules/experiences/client/views/edit-experience.client.view.html
@@ -3,94 +3,107 @@
     <h1>Edit Experience</h1>
   </div>
   <div class="col-md-12">
-    <form name="experienceForm" ng-submit="update(experienceForm.$valid)" novalidate>
-      <fieldset>
-        <fieldset class="form-group" show-errors>
-          <label for="medium">Medium</label>
-          <select id="medium" name="medium" class="form-control"
-                  ng-model="experience.medium" required
-                  ng-options="medium as medium.name for medium in media"></select>
-          <div ng-messages="experienceForm.medium.$error" role="alert">
-            <p class="help-block error-text" ng-message="required">Experience medium is required.</p>
-          </div>
-        </fieldset>
-
-        <fieldset class="form-group" show-errors>
-          <label for="title">Title</label>
-          <input type="text" id="title" name="title" class="form-control"
-                 ng-model="experience.title" required>
-          <div ng-messages="experienceForm.title.$error" role="alert">
-            <p class="help-block error-text" ng-message="required">Experience title is required.</p>
-          </div>
-        </fieldset>
-
-        <fieldset class="form-group" show-errors>
-          <label for="date">Date</label>
-          <p class="input-group">
-            <input type="text" id="date" name="date" class="form-control"
-                   datepicker-popup="{{format}}"
-                   ng-model="experience.date" is-open="status.opened"
-                   datepicker-options="datePickerOptions" close-text="Close" disabled required/>
+    <form name="experienceForm" novalidate>
+      <fieldset class="form-group" show-errors>
+        <label for="date">Date</label>
+        <p class="input-group">
+          <input type="text" id="date" name="date" class="form-control"
+                 datepicker-popup="{{format}}"
+                 ng-model="experience.date" is-open="status.opened"
+                 datepicker-options="datePickerOptions" close-text="Close" disabled required/>
           <span class="input-group-btn">
             <button type="button" class="btn btn-default" ng-click="open($event)"><i class="glyphicon glyphicon-calendar"></i></button>
           </span>
-          </p>
-          <div ng-messages="experienceForm.date.$error" role="alert">
-            <p class="help-block error-text" ng-message="required">Experience date is required.</p>
-          </div>
-        </fieldset>
+        </p>
+        <div ng-messages="experienceForm.date.$error" role="alert">
+          <p class="help-block error-text" ng-message="required">Experience date is required.</p>
+        </div>
+      </fieldset>
 
-        <fieldset class="form-group">
-          <label for="location">Location</label>
+      <fieldset class="form-group" show-errors>
+        <label for="title">Title</label>
+        <input type="text" id="title" name="title" class="form-control"
+               ng-model="experience.title" required>
+        <div ng-messages="experienceForm.title.$error" role="alert">
+          <p class="help-block error-text" ng-message="required">Experience title is required.</p>
+        </div>
+      </fieldset>
+
+      <fieldset class="form-group" show-errors>
+        <label for="medium">Medium</label>
+        <select id="medium" name="medium" class="form-control"
+                ng-model="experience.medium" required
+                ng-options="medium as medium.name for medium in media"></select>
+        <div ng-messages="experienceForm.medium.$error" role="alert">
+          <p class="help-block error-text" ng-message="required">Experience medium is required.</p>
+        </div>
+
+        <div ng-show="experience.medium" class="col-md-12">
+          <div class="form-group" ng-show="specificationsTemp.length === 0">
+            <label>No medium Specifications</label>
+          </div>
+          <div class="form-group" ng-show="specificationsTemp.length > 0">
+            <label>Medium Specifications</label>
+            <div class="form-horizontal">
+              <div class="form-group" ng-repeat="specification in specificationsTemp">
+                <label for="mediumSpecification{{$index}}" class="col-sm-4 control-label">{{specification.name}}</label>
+                <div class="col-sm-8">
+                  <input type="text" id="mediumSpecification{{$index}}" name="mediumSpecification{{$index}}" class="form-control"
+                         ng-model="specification.value" placeholder="Add specification value">
+                </div>
+              </div>
+            </div>
+            <div >
+            </div>
+          </div>
+        </div>
+      </fieldset>
+
+      <fieldset class="form-group">
+        <label for="location">Location</label>
+        <p class="input-group">
           <select id="location" name="location" class="form-control"
                   ng-model="experience.location"
                   ng-options="location as location.description for location in locations"></select>
-        </fieldset>
+          <span class="input-group-btn">
+            <button type="button" class="btn btn-default" ng-click="openMap()"><i class="glyphicon glyphicon-map-marker"></i></button>
+          </span>
+        </p>
+      </fieldset>
 
-        <div class="form-group">
-          <label>Author(s)</label>
-          <editable-string-array id="author" name="author"
-                                 ng-model="experience.author"></editable-string-array>
-        </div>
+      <div class="form-group">
+        <label>Author(s)</label>
+        <editable-string-array id="author" name="author"
+                               ng-model="experience.author"></editable-string-array>
+      </div>
 
-        <fieldset class="form-group">
-          <label for="description">Description</label>
+      <fieldset class="form-group">
+        <label for="description">Description</label>
           <textarea id="description" name="description" class="form-control"
                     ng-model="experience.description"></textarea>
-        </fieldset>
+      </fieldset>
 
-        <fieldset class="form-group">
-          <label for="review">Review</label>
+      <fieldset class="form-group">
+        <label for="review">Review</label>
           <textarea id="review" name="review" class="form-control"
                     ng-model="experience.review"></textarea>
-        </fieldset>
+      </fieldset>
 
-        <fieldset class="form-group" show-errors>
-          <label for="rating">Rating</label>
-          <input type="number" id="rating" name="rating" class="form-control"
-                 min="0" max="10" placeholder="Rating of the experience"
-                 ng-model="experience.rating">
-          <div ng-messages="experienceForm.rating.$valid" role="alert">
-            <p class="help-block error-text">Rating between 0 and 10</p>
-          </div>
-        </fieldset>
-
-        <fieldset class="form-group" ng-show="specificationsTemp.length > 0">
-          <label>Medium Specifications</label>
-          <div ng-repeat="specification in specificationsTemp"  >
-            <label for="mediumSpecification{{$index}}">{{specification.name}}</label>
-            <input type="text" id="mediumSpecification{{$index}}" name="mediumSpecification{{$index}}" class="form-control"
-              ng-model="specification.value">
-          </div>
-        </fieldset>
-
-        <div class="form-group">
-          <input type="submit" class="btn btn-default">
-        </div>
-        <div ng-show="error" class="text-danger">
-          <strong ng-bind="error"></strong>
+      <fieldset class="form-group" show-errors>
+        <label class="control-label">Rating</label><br>
+        <rating id="rating" name="rating"
+                ng-model="experience.rating" max="10" readonly="false" ></rating>
+        <div ng-messages="experienceForm.rating.$valid" role="alert">
+          <p class="help-block error-text">Rating between 0 and 10</p>
         </div>
       </fieldset>
+
+      <div class="form-group">
+        <button type="button" class="btn btn-default" ng-click="update(experienceForm.$valid)">Update Experience</button>
+      </div>
+      <div ng-show="error" class="text-danger">
+        <strong ng-bind="error"></strong>
+      </div>
     </form>
   </div>
 </section>
