update readme and start page info.

--- a/modules/core/client/views/home.client.view.html
+++ b/modules/core/client/views/home.client.view.html
@@ -9,5 +9,26 @@
   <div>
     <h2>Keep track of your cultural experiences</h2>
     <p>Save info of your theater, book, film, ... experiences.</p>
+    <p>Filter the logged experiences, e.g. to determine your end-of-year top 10!</p>
+  </div>
+  <div>
+    <h2>How does it work?</h2>
+    <ul>
+      <li><p>Create an account.</p></li>
+      <li><p>Add personal media to the list of general media.</p></li>
+      <li><p>Add personal locations to the list of general media.</p></li>
+      <li><p>Add experiences!</p></li>
+    </ul>
+  </div>
+  <div>
+    <h2>Experiences</h2>
+    <p>An experience is defined by:</p>
+    <ul>
+      <li><p>the date</p></li>
+      <li><p>the medium: theater, book, film. Or define your personal media!</p></li>
+      <li><p>the title</p></li>
+      <li><p>the location: where did the experience take place?</p></li>
+      <li><p>description, review, rating, ...</p></li>
+    </ul>
   </div>
 </section>
