--- a/modules/experiences/client/views/list-experiences.client.view.html
+++ b/modules/experiences/client/views/list-experiences.client.view.html
@@ -62,12 +62,12 @@
             <span>Found 1 experience.</span>
           </div>
         </div>
-        <div class="col-md-4">
+        <!--<div class="col-md-4">
           <ul class="nav nav-pills pull-right">
             <li class="active"><a href="#">Table</a></li>
             <li><a href="#">Map</a></li>
           </ul>
-        </div>
+        </div>-->
       </div>
 
       <!-- content section -->
